AulasEG/LogoLISS/output/logolissParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g 2011-04-11 11:50:06

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
public class logolissParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "TRUE", "FALSE", "PROGRAM", "IDENT", "DECLARATIONS", "STATEMENTS", "INTEGER", "BOOLEAN", "ARRAY", "SIZE", "NUM", "STRING", "FORWARD", "BACKWARD", "RRIGHT", "RLEFT", "PEN", "UPS", "DOWNS", "GOTO", "WHERE", "SUCC", "PRED", "SAY", "ASK", "IF", "THEN", "ELSE", "WHILE", "IN", "WS", "'{'", "'}'", "'->'", "';'", "','", "'='", "'['", "']'", "'?'", "'+'", "'-'", "'!'", "'('", "')'", "'||'", "'*'", "'/'", "'&&'", "'**'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'in'"
    };
    public static final int EOF=-1;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int TRUE=4;
    public static final int FALSE=5;
    public static final int PROGRAM=6;
    public static final int IDENT=7;
    public static final int DECLARATIONS=8;
    public static final int STATEMENTS=9;
    public static final int INTEGER=10;
    public static final int BOOLEAN=11;
    public static final int ARRAY=12;
    public static final int SIZE=13;
    public static final int NUM=14;
    public static final int STRING=15;
    public static final int FORWARD=16;
    public static final int BACKWARD=17;
    public static final int RRIGHT=18;
    public static final int RLEFT=19;
    public static final int PEN=20;
    public static final int UPS=21;
    public static final int DOWNS=22;
    public static final int GOTO=23;
    public static final int WHERE=24;
    public static final int SUCC=25;
    public static final int PRED=26;
    public static final int SAY=27;
    public static final int ASK=28;
    public static final int IF=29;
    public static final int THEN=30;
    public static final int ELSE=31;
    public static final int WHILE=32;
    public static final int IN=33;
    public static final int WS=34;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "declaration", "expression", "elem", "rotate", "vars", 
        "ifthenelse_stat", "step", "term", "assignment", "array_definition", 
        "inic_var", "body", "array_initialization", "declarations", "mode", 
        "variable", "while_stat", "conditional_statement", "say_statement", 
        "succorpred", "var", "add_op", "turtle_commands", "succpred", "ask_statement", 
        "else_expression", "iterative_statement", "single_expression", "variable_declaration", 
        "statement", "statements", "dialogue", "mul_op", "value_var", "factor", 
        "constant", "type", "logoliss", "rel_op", "likeaboss", "location", 
        "array_acess"
    };
    public static final boolean[] decisionCanBacktrack = new boolean[] {
        false, // invalid decision
        false, false, false, false, false, false, false, false, false, false, 
            false, false, false, false, false, false, false, false, false
    };

     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public logolissParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public logolissParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this, port, null);
            setDebugListener(proxy);
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
        }
    public logolissParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg, new RecognizerSharedState());

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }


    public String[] getTokenNames() { return logolissParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g"; }



    // $ANTLR start "logoliss"
    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:10:1: logoliss : PROGRAM IDENT '{' body '}' ;
    public final void logoliss() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "logoliss");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(10, 1);

        try {
            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:11:5: ( PROGRAM IDENT '{' body '}' )
            dbg.enterAlt(1);

            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:11:10: PROGRAM IDENT '{' body '}'
            {
            dbg.location(11,10);
            match(input,PROGRAM,FOLLOW_PROGRAM_in_logoliss43); 
            dbg.location(11,21);
            match(input,IDENT,FOLLOW_IDENT_in_logoliss48); 
            dbg.location(11,34);
            match(input,35,FOLLOW_35_in_logoliss57); 
            dbg.location(11,41);
            pushFollow(FOLLOW_body_in_logoliss62);
            body();

            state._fsp--;

            dbg.location(11,49);
            match(input,36,FOLLOW_36_in_logoliss67); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(12, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "logoliss");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "logoliss"


    // $ANTLR start "body"
    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:14:1: body : DECLARATIONS declarations STATEMENTS statements ;
    public final void body() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "body");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(14, 1);

        try {
            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:15:5: ( DECLARATIONS declarations STATEMENTS statements )
            dbg.enterAlt(1);

            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:15:10: DECLARATIONS declarations STATEMENTS statements
            {
            dbg.location(15,10);
            match(input,DECLARATIONS,FOLLOW_DECLARATIONS_in_body95); 
            dbg.location(15,30);
            pushFollow(FOLLOW_declarations_in_body104);
            declarations();

            state._fsp--;

            dbg.location(15,51);
            match(input,STATEMENTS,FOLLOW_STATEMENTS_in_body114); 
            dbg.location(15,69);
            pushFollow(FOLLOW_statements_in_body123);
            statements();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(16, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "body");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "body"


    // $ANTLR start "declarations"
    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:20:1: declarations : declaration ( declarations )? ;
    public final void declarations() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "declarations");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(20, 1);

        try {
            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:21:5: ( declaration ( declarations )? )
            dbg.enterAlt(1);

            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:21:10: declaration ( declarations )?
            {
            dbg.location(21,10);
            pushFollow(FOLLOW_declaration_in_declarations149);
            declaration();

            state._fsp--;

            dbg.location(21,29);
            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:21:29: ( declarations )?
            int alt1=2;
            try { dbg.enterSubRule(1);
            try { dbg.enterDecision(1, decisionCanBacktrack[1]);

            int LA1_0 = input.LA(1);

            if ( (LA1_0==IDENT) ) {
                alt1=1;
            }
            } finally {dbg.exitDecision(1);}

            switch (alt1) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:21:29: declarations
                    {
                    dbg.location(21,29);
                    pushFollow(FOLLOW_declarations_in_declarations158);
                    declarations();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(1);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(22, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declarations");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "declarations"


    // $ANTLR start "declaration"
    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:24:1: declaration : variable_declaration ;
    public final void declaration() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "declaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(24, 1);

        try {
            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:25:5: ( variable_declaration )
            dbg.enterAlt(1);

            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:25:10: variable_declaration
            {
            dbg.location(25,10);
            pushFollow(FOLLOW_variable_declaration_in_declaration183);
            variable_declaration();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(26, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "declaration"


    // $ANTLR start "variable_declaration"
    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:30:1: variable_declaration : vars '->' type ';' ;
    public final void variable_declaration() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "variable_declaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(30, 1);

        try {
            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:31:5: ( vars '->' type ';' )
            dbg.enterAlt(1);

            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:31:10: vars '->' type ';'
            {
            dbg.location(31,10);
            pushFollow(FOLLOW_vars_in_variable_declaration213);
            vars();

            state._fsp--;

            dbg.location(31,18);
            match(input,37,FOLLOW_37_in_variable_declaration218); 
            dbg.location(31,26);
            pushFollow(FOLLOW_type_in_variable_declaration223);
            type();

            state._fsp--;

            dbg.location(31,34);
            match(input,38,FOLLOW_38_in_variable_declaration228); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(32, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "variable_declaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "variable_declaration"


    // $ANTLR start "vars"
    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:34:1: vars : var ( ',' vars )? ;
    public final void vars() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "vars");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(34, 1);

        try {
            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:34:9: ( var ( ',' vars )? )
            dbg.enterAlt(1);

            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:34:14: var ( ',' vars )?
            {
            dbg.location(34,14);
            pushFollow(FOLLOW_var_in_vars251);
            var();

            state._fsp--;

            dbg.location(34,21);
            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:34:21: ( ',' vars )?
            int alt2=2;
            try { dbg.enterSubRule(2);
            try { dbg.enterDecision(2, decisionCanBacktrack[2]);

            int LA2_0 = input.LA(1);

            if ( (LA2_0==39) ) {
                alt2=1;
            }
            } finally {dbg.exitDecision(2);}

            switch (alt2) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:34:22: ',' vars
                    {
                    dbg.location(34,22);
                    match(input,39,FOLLOW_39_in_vars257); 
                    dbg.location(34,29);
                    pushFollow(FOLLOW_vars_in_vars262);
                    vars();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(2);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(35, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "vars");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "vars"


    // $ANTLR start "var"
    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:37:1: var : IDENT value_var ;
    public final void var() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "var");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(37, 1);

        try {
            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:37:8: ( IDENT value_var )
            dbg.enterAlt(1);

            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:37:13: IDENT value_var
            {
            dbg.location(37,13);
            match(input,IDENT,FOLLOW_IDENT_in_var283); 
            dbg.location(37,22);
            pushFollow(FOLLOW_value_var_in_var288);
            value_var();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(38, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "var");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "var"


    // $ANTLR start "value_var"
    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:40:1: value_var : ( ( '=' ) inic_var | );
    public final void value_var() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "value_var");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(40, 1);

        try {
            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:41:5: ( ( '=' ) inic_var | )
            int alt3=2;
            try { dbg.enterDecision(3, decisionCanBacktrack[3]);

            int LA3_0 = input.LA(1);

            if ( (LA3_0==40) ) {
                alt3=1;
            }
            else if ( (LA3_0==37||LA3_0==39) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:41:10: ( '=' ) inic_var
                    {
                    dbg.location(41,10);
                    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:41:10: ( '=' )
                    dbg.enterAlt(1);

                    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:41:11: '='
                    {
                    dbg.location(41,11);
                    match(input,40,FOLLOW_40_in_value_var313); 

                    }

                    dbg.location(41,19);
                    pushFollow(FOLLOW_inic_var_in_value_var319);
                    inic_var();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:43:5: 
                    {
                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(43, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "value_var");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "value_var"


    // $ANTLR start "type"
    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:45:1: type : ( INTEGER | BOOLEAN | ARRAY SIZE NUM );
    public final void type() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "type");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(45, 1);

        try {
            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:45:9: ( INTEGER | BOOLEAN | ARRAY SIZE NUM )
            int alt4=3;
            try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            switch ( input.LA(1) ) {
            case INTEGER:
                {
                alt4=1;
                }
                break;
            case BOOLEAN:
                {
                alt4=2;
                }
                break;
            case ARRAY:
                {
                alt4=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }

            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:45:14: INTEGER
                    {
                    dbg.location(45,14);
                    match(input,INTEGER,FOLLOW_INTEGER_in_type344); 

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:46:10: BOOLEAN
                    {
                    dbg.location(46,10);
                    match(input,BOOLEAN,FOLLOW_BOOLEAN_in_type355); 

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:47:10: ARRAY SIZE NUM
                    {
                    dbg.location(47,10);
                    match(input,ARRAY,FOLLOW_ARRAY_in_type366); 
                    dbg.location(47,19);
                    match(input,SIZE,FOLLOW_SIZE_in_type371); 
                    dbg.location(47,27);
                    match(input,NUM,FOLLOW_NUM_in_type376); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(48, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "type");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "type"


    // $ANTLR start "inic_var"
    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:50:1: inic_var : ( constant | array_definition );
    public final void inic_var() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "inic_var");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(50, 1);

        try {
            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:51:5: ( constant | array_definition )
            int alt5=2;
            try { dbg.enterDecision(5, decisionCanBacktrack[5]);

            int LA5_0 = input.LA(1);

            if ( ((LA5_0>=TRUE && LA5_0<=FALSE)||(LA5_0>=NUM && LA5_0<=STRING)) ) {
                alt5=1;
            }
            else if ( (LA5_0==41) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(5);}

            switch (alt5) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:51:10: constant
                    {
                    dbg.location(51,10);
                    pushFollow(FOLLOW_constant_in_inic_var400);
                    constant();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:52:10: array_definition
                    {
                    dbg.location(52,10);
                    pushFollow(FOLLOW_array_definition_in_inic_var411);
                    array_definition();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(53, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "inic_var");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "inic_var"


    // $ANTLR start "constant"
    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:55:1: constant : ( NUM | STRING | TRUE | FALSE );
    public final void constant() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "constant");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(55, 1);

        try {
            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:56:5: ( NUM | STRING | TRUE | FALSE )
            dbg.enterAlt(1);

            // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:
            {
            dbg.location(56,5);
            if ( (input.LA(1)>=TRUE && input.LA(1)<=FALSE)||(input.LA(1)>=NUM && input.LA(1)<=STRING) ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(60, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "constant");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "constant"


    // $ANTLR start "array_definition"
    // /Users/ulissesaraujocosta/ulisses/univ/msc/el/pi/Static-Code-Analyzer/AulasEG/LogoLISS/logoliss.g:65:1: array_definition : '[' array_initialization ']' ;
    public final void array_definition() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "array_definition");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(65, 1);
